# Rolex-pricing

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  Makefile  PROJECT_STATUS.md  README.md  TODO_BACKLOG.md  pyproject.toml
config/: reference_catalog.json
data/interim/: chrono24_pricing_latest_manifest.json  chrono24_pricing_live_snapshot.csv  chrono24_pricing_replay_diff.csv  chrono24_pricing_replay_latest.json  rolex_ad_latest_manifest.json  rolex_ad_live_snapshot.csv  rolex_ad_replay_latest.json
data/processed/: ad_change_log.csv  ad_snapshot_history.csv  ad_state_monthly_counts.csv  grey_market_weekly_long.csv  grey_reference_summary.csv  monthly_market_panel.csv  pipeline_run_history.csv  schema_version.json
data/processed/history/: pipeline_run_manifest_20260414T014056+0000.json
data/quality/: chrono24_pricing_replay_rollup.csv  chrono24_pricing_replay_rollup_summary.json  monthly_network_pricing_correlation.csv  rolex_ad_replay_rollup.csv  rolex_ad_replay_rollup_summary.json  validation_summary.csv
docs/: DATA_MODEL.md
reports/: monthly_market_summary.md
src/rolex_market_intelligence/: __init__.py  __main__.py  cli.py  legacy.py  normalize.py  pipeline.py  promotion.py  replay.py  settings.py
src/rolex_market_intelligence/collectors/: __init__.py  chrono24_pricing.py  rolex_ad.py
tests/: test_chrono24_collector.py  test_collectors.py  test_normalize.py  test_pipeline.py  test_promotion.py  test_replay.py
tests/fixtures/: chrono24_reference_page.html  rolex_detail_page.html  rolex_state_page.html
(+1 files in other folders)
