[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rolex-market-intelligence"
version = "0.1.0"
description = "Historical Rolex U.S. dealer and grey-market pricing analytics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
collectors = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "tenacity>=9.0",
  "selenium>=4.30"
]

[project.scripts]
rolex-market = "rolex_market_intelligence.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
